# testing_workshop

./: LICENSE  README.md  requirements.txt  setup.cfg
src/testing_workshop/: api.py  blast.py  data_structures.py  io.py
tests/data/: blast_response.xml  proteins.csv  proteins.faa
tests/end_to_end_tests/: test_api_pipeline.py  test_blast_pipeline.py
tests/integration_tests/: test_data_structures_blast.py  test_io_data_structures.py
tests/unit_tests/: test_api.py  test_blast.py  test_data_structures.py  test_io.py
