[metadata]
name = testing_workshop
version = 0.0.0
description = testing_workshop
long_description = file: README.md
keywords = testing
author = Joao Capela
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    pandas>=1.3.5

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
plants_sm = py.typed

[flake8]
max-line-length = 160